--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  modal_bottom_sheet: ^2.0.0
   flutter_mobx: ^2.0.0
   mobx: ^2.0.1
   shared_preferences: ^2.0.5
@@ -49,7 +50,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  mobx_codegen:   
+  mobx_codegen:  
+  mockito:
+  faker:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
